--- a/styles.scss
+++ b/styles.scss
@@ -68,15 +68,15 @@ a {
     }
 }
 
-#portolfioItem1{
+#portfolioItem1{
     animation: jump 600ms ease-in-out forwards 0.5s;
 }
 
-#portolfioItem2{
+#portfolioItem2{
     animation: jump 600ms ease-in-out forwards 1s;
 }
 
-#portolfioItem3{
+#portfolioItem3{
     animation: jump 600ms ease-in-out forwards 1.5s;
 }
 
