--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ a {
   grid-row: 2;
   font-size: 4.5vh; }
 
+#mobileContent {
+  display: none; }
+
 #portfolioItems {
   grid-column: 2 / 3;
   grid-row: 4;
@@ -103,22 +106,31 @@ img {
 
 @media screen and (max-width: 800px) {
   body {
-    margin: 30px 10px;
-    background-color: pink;
+    margin: 50px 10px;
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 3vh;
     align-items: flex-start;
     justify-content: flex-start; }
-  #descriptionContent {
-    padding: 0px 0px !important; }
-  #portfolioItems {
-    display: none; }
-  #responsiveHeader1 {
-    grid-row: 3 / 4;
-    grid-column: 1;
-    font-size: 8vh; }
-  #itemDescription {
-    border-right: none; }
-  img {
+  #title {
+    margin-bottom: 25px; }
+  #mobileContent {
+    display: flex;
+    flex-direction: column; }
+    #mobileContent img {
+      width: 150px;
+      height: 150px;
+      border: none;
+      float: left;
+      shape-outside: circle(50%);
+      margin: 20px; }
+    #mobileContent #cta {
+      margin-top: 15px;
+      display: block; }
+    #mobileContent a {
+      background-color: #ffd552;
+      font-family: monospace;
+      font-weight: bold; }
+  #portfolioItems, #itemDescription, #actualImage, #gitArticleDescription {
     display: none; } }
