--- a/styles.scss
+++ b/styles.scss
@@ -16,8 +16,8 @@ body {
     grid-column: 2 / 4;
     grid-row: 1;
     font-size: 10vh;
-    // align-self: end;
     letter-spacing: 1px;
+    margin-top: 35px;
 }
 
 a {
@@ -145,7 +145,7 @@ img{
 
 @media screen and (max-width: 800px) {
     body {
-      margin: 50px 10px;
+      margin: 25px 20px;
       display: flex;
       flex-direction: column;
       font-family: Arial, Helvetica, sans-serif;
@@ -177,6 +177,7 @@ img{
             background-color: #ffd552;
             font-family: monospace;
             font-weight: bold;
+            letter-spacing: 2px;
         }
     }
     
